--- a/index.html
+++ b/index.html
@@ -74,12 +74,12 @@
                     <p>
                         Earned a fully-funded seat at the Indian Institute of Information Technology <b>(IIIT)</b> for both Pre-University Course (PUC) and Bachelor of Technology (B.Tech) in Electronics and Communication Engineering. Developed a strong foundation in programming with proficiency in <b>Java, C, and Python</b>.
                         
-                        Commenced professional journey as a <b>Junior Programmer</b> at a Hyderabad-based startup, where I specialized in <b>Ruby on Rails<b> development. Contributed to building scalable web applications and gained hands-on experience in agile environments, version control, and backend architecture.
+                        Commenced professional journey as a <b>Junior Programmer</b> at a Hyderabad-based startup, where I specialized in <b>Ruby on Rails</b> development. Contributed to building scalable web applications and gained hands-on experience in agile environments, version control, and backend architecture.
                     </p>
 
                     <h3>My Values & Mission</h3>
                     <p>
-                        I believe in <b>continuous learning, integrity</b>>, and <b>collaborative growth</b>. My journey—from earning a merit-based seat at IIIT to launching my career in a fast-paced startup—has instilled in me the value of perseverance and adaptability. I’m driven by the challenge of solving real-world problems through technology and by the opportunity to build systems that improve people’s lives.
+                        I believe in <b>continuous learning, integrity</b>, and <b>collaborative growth</b>. My journey—from earning a merit-based seat at IIIT to launching my career in a fast-paced startup—has instilled in me the value of perseverance and adaptability. I’m driven by the challenge of solving real-world problems through technology and by the opportunity to build systems that improve people’s lives.
                     </p>
 
                     <h3>Beyond Work</h3>
