--- a/index.html
+++ b/index.html
@@ -73,19 +73,24 @@
                     </p>
                     <p>
                         Earned a fully-funded seat at the Indian Institute of Information Technology <b>(IIIT)</b> for both Pre-University Course (PUC) and Bachelor of Technology (B.Tech) in Electronics and Communication Engineering. Developed a strong foundation in programming with proficiency in <b>Java, C, and Python</b>.
-                        
+                    </p>
+                    <p>
                         Commenced professional journey as a <b>Junior Programmer</b> at a Hyderabad-based startup, where I specialized in <b>Ruby on Rails</b> development. Contributed to building scalable web applications and gained hands-on experience in agile environments, version control, and backend architecture.
                     </p>
 
                     <h3>My Values & Mission</h3>
                     <p>
-                        I believe in <b>continuous learning, integrity</b>, and <b>collaborative growth</b>. My journey—from earning a merit-based seat at IIIT to launching my career in a fast-paced startup—has instilled in me the value of perseverance and adaptability. I’m driven by the challenge of solving real-world problems through technology and by the opportunity to build systems that improve people’s lives.
+                        I believe in <b>continuous learning, integrity</b>, and <b>collaborative growth</b>. My journey—from earning a merit-based seat at IIIT to launching my career in a fast-paced startup—has instilled in me the value of perseverance and adaptability.
+                    </p>
+                    <p>
+                        I’m driven by the challenge of solving real-world problems through technology and by the opportunity to build systems that improve people’s lives.
                     </p>
 
                     <h3>Beyond Work</h3>
                     <p>
                         Outside the professional sphere, I find joy in the simple yet enriching experiences that keep me grounded and inspired. I’m an avid <b>music lover</b>, often turning to melodies to recharge and reflect. I enjoy <b>traveling</b> and <b>exploring new places</b>, which fuels my curiosity and broadens my perspective—qualities I bring into my work as well.
-                        
+                    </p>
+                    <p>
                         Whether it's <b>watching movies with friends</b>, discovering hidden gems in a new city, or simply soaking in different cultures, I value experiences that connect people and spark creativity. These moments not only help me unwind but also shape the way I approach collaboration, storytelling, and problem-solving in tech.
 
                     </p>
