--- a/index.html
+++ b/index.html
@@ -22,9 +22,9 @@
                     <li class="nav__item"><a href="#home" class="nav__link">Home</a></li>
                     <li class="nav__item"><a href="#about" class="nav__link">About</a></li>
                     <li class="nav__item"><a href="#professional" class="nav__link">Experience</a></li>
-                    <li class="nav__item"><a href="#portfolio" class="nav__link">Portfolio</a></li>
+<!--                     <li class="nav__item"><a href="#portfolio" class="nav__link">Portfolio</a></li> -->
                     <li class="nav__item"><a href="#interests" class="nav__link">Interests</a></li>
-                    <li class="nav__item"><a href="#blog" class="nav__link">Blog</a></li>
+<!--                     <li class="nav__item"><a href="#blog" class="nav__link">Blog</a></li> -->
                     <li class="nav__item"><a href="#contact" class="nav__link">Contact</a></li>
                 </ul>
             </div>
