--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
 
                     <h3>My Values & Mission</h3>
                     <p>
-                        I believe in <b>continuous learning, integrity</b>, and <b>collaborative growth</b>. My journey—from earning a merit-based seat at IIIT to launching my career in a fast-paced startup—has instilled in me the value of perseverance and adaptability.
+                        I believe in <b>continuous learning, integrity</b>, and <b>collaborative growth</b>. My journey from earning a merit-based seat at IIIT to launching my career in a fast-paced startup has instilled in me the value of perseverance and adaptability.
                     </p>
                     <p>
                         I’m driven by the challenge of solving real-world problems through technology and by the opportunity to build systems that improve people’s lives.
@@ -88,7 +88,7 @@
 
                     <h3>Beyond Work</h3>
                     <p>
-                        Outside the professional sphere, I find joy in the simple yet enriching experiences that keep me grounded and inspired. I’m an avid <b>music lover</b>, often turning to melodies to recharge and reflect. I enjoy <b>traveling</b> and <b>exploring new places</b>, which fuels my curiosity and broadens my perspective—qualities I bring into my work as well.
+                        Outside the professional sphere, I find joy in the simple yet enriching experiences that keep me grounded and inspired. I’m an avid <b>music lover</b>, often turning to melodies to recharge and reflect. I enjoy <b>traveling</b> and <b>exploring new places</b>, which fuels my curiosity and broadens my perspective qualities I bring into my work as well.
                     </p>
                     <p>
                         Whether it's <b>watching movies with friends</b>, discovering hidden gems in a new city, or simply soaking in different cultures, I value experiences that connect people and spark creativity. These moments not only help me unwind but also shape the way I approach collaboration, storytelling, and problem-solving in tech.
